fix: input had wrong font-family

--- a/apps/website/src/components/EditProfile/EditUserForm.module.scss
+++ b/apps/website/src/components/EditProfile/EditUserForm.module.scss
@@ -99,6 +99,7 @@
 
 .input {
 	box-sizing: border-box;
+	font-family: $font-family;
 	padding: 12px;
 	border: solid rgb(222, 222, 222) 3px;
 	border-radius: 15px;
